Closed
Bug 1333749
Opened 8 years ago
Closed 8 years ago
Mirrored and incorrect inset box-shadow with large border radius
Categories
(Core :: Graphics, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox-esr45 | --- | unaffected |
firefox51 | --- | unaffected |
firefox52 | --- | unaffected |
firefox53 | + | fixed |
firefox54 | + | fixed |
People
(Reporter: mstange, Assigned: lsalzman)
References
Details
(Keywords: regression, Whiteboard: [gfx-noted])
Attachments
(3 files)
251 bytes,
text/html
|
Details | |
247 bytes,
text/html
|
Details | |
1.50 KB,
patch
|
mchang
:
review+
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
In the testcase, there should only be one white circle, not two.
Reporter | ||
Updated•8 years ago
|
Summary: Mirrored box-shadow with large spread radius → Mirrored and incorrect inset box-shadow with large border radius
Reporter | ||
Comment 1•8 years ago
|
||
Comment 2•8 years ago
|
||
[Tracking Requested - why for this release]:
[Tracking Requested - why for this release]:Layout is broken
sion window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b5541adf77a4eeb1f237828e1bd6b8076bafd1f3&tochange=edefce9fdb67ed34c50e2db610ab9b7f60041da0
Regressed by: Bug 1250037
Blocks: 1250037
status-firefox51:
--- → unaffected
status-firefox52:
--- → unaffected
status-firefox53:
--- → affected
status-firefox-esr45:
--- → unaffected
tracking-firefox53:
--- → ?
tracking-firefox54:
--- → ?
Flags: needinfo?(mchang)
Flags: needinfo?(lsalzman)
Keywords: regressionwindow-wanted
Version: Trunk → 53 Branch
Assignee | ||
Comment 3•8 years ago
|
||
So, for inset box shadows, the whitespace rect can be placed in a non-symmetric manner inside the outside rect depending on user input. This checks for that before we attempt to mirror it.
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Flags: needinfo?(mchang)
Flags: needinfo?(lsalzman)
Attachment #8830452 -
Flags: review?(mchang)
Assignee | ||
Updated•8 years ago
|
Has Regression Range: --- → yes
Has STR: --- → yes
Priority: -- → P1
Whiteboard: [gfx-noted]
Updated•8 years ago
|
Attachment #8830452 -
Flags: review?(mchang) → review+
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/63aba54a7342
verify that inset box shadows are symmetric before attempting to mirror them. r=mchang
Comment 6•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Assignee | ||
Comment 7•8 years ago
|
||
Comment on attachment 8830452 [details] [diff] [review]
verify that inset box shadows are symmetric before attempting to mirror them
Approval Request Comment
[Feature/Bug causing the regression]: bug 1250037, 53+
[User impact if declined]: Inset box shadows with an offset will fail to render properly.
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: aurora (53)
[Is the change risky?]: no
[Why is the change risky/not risky?]: This just disables an optimization added in bug 1250037 from being used when it is not applicable.
[String changes made/needed]: None
Attachment #8830452 -
Flags: approval-mozilla-aurora?
Comment on attachment 8830452 [details] [diff] [review]
verify that inset box shadows are symmetric before attempting to mirror them
Fixes a recent regression, Aurora53+
Attachment #8830452 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•8 years ago
|
||
(In reply to Lee Salzman [:lsalzman] from comment #7)
> [Is this code covered by automated tests?]: yes
Was the attached testcase supposed to have landed as a reftest?
Flags: needinfo?(lsalzman)
Flags: in-testsuite?
Comment 10•8 years ago
|
||
bugherder uplift |
Assignee | ||
Comment 11•8 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #9)
> (In reply to Lee Salzman [:lsalzman] from comment #7)
> > [Is this code covered by automated tests?]: yes
>
> Was the attached testcase supposed to have landed as a reftest?
The testcase as it is can't land as a reftest. It would require reworking.
Flags: needinfo?(lsalzman)
You need to log in
before you can comment on or make changes to this bug.
Description
•