Bug 1333749 - Verify that inset box shadows are symmetric before attempting to mirror them. r=mchang, a=ritu

MozReview-Commit-ID: 2q3WH25PWSs

--HG--
extra : source : 63aba54a73422e1affc34a391bd9978d19989489